# mixer

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.c
examples/: CMakeLists.txt  test.c
include/: mixer.h
src/: ao-backend.c  file.c  mixer.c  mutex.c  sndfile.c  thread.c
